# generic_object_pool

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example1.cc  example2.cc
include/: poolable_object_factory.h
include/cfood/: generic_object_pool.h  poolable_object.h  poolable_object_factory.h
src/: generic_object_pool.h  poolable_object.h  poolable_object_factory.h
